--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ node_modules
 venv/
 .vscode
 course-02/exercises/udacity-c2-basic-server/credentials.csv
+course-02/exercises/udacity-c2-restapi/src/credentials.csv
+course-02/exercises/udacity-c2-restapi/src/udagram-dev.ppk
