--- a/nd9990-c3-microservices-v1-master/lesson-3-Container/exercises/udacity-c3-deployment/docker/docker-compose.yaml
+++ b/nd9990-c3-microservices-v1-master/lesson-3-Container/exercises/udacity-c3-deployment/docker/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
-      POSTGRESS_USERNAME: $ENV:ENV:POSTGRESS_USERNAME
+      POSTGRESS_USERNAME: $ENV:POSTGRESS_USERNAME
       POSTGRESS_PASSWORD: $ENV:ENV:POSTGRESS_PASSWORD 
       POSTGRESS_DATABASE: $ENV:POSTGRESS_DATABASE 
       POSTGRESS_HOST: $ENV:POSTGRESS_HOST 
