--- a/nd9990-c3-microservices-v1-master/lesson-3-Container/exercises/udacity-c3-deployment/docker/docker-compose.yaml
+++ b/nd9990-c3-microservices-v1-master/lesson-3-Container/exercises/udacity-c3-deployment/docker/docker-compose.yaml
@@ -13,28 +13,28 @@ services:
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
-      POSTGRESS_USERNAME: $ENV:POSTGRESS_USERNAME
-      POSTGRESS_PASSWORD: $ENV:ENV:POSTGRESS_PASSWORD 
-      POSTGRESS_DATABASE: $ENV:POSTGRESS_DATABASE 
-      POSTGRESS_HOST: $ENV:POSTGRESS_HOST 
-      AWS_REGION: $ENV:AWS_REGION 
-      AWS_PROFILE: $ENV:AWS_PROFILE 
-      AWS_MEDIA_BUCKET: $ENV:AWS_MEDIA_BUCKET
-      JWT_SECRET: $ENV:JWT_SECRET
+      POSTGRESS_USERNAME: ${ENV:POSTGRESS_USERNAME}
+      POSTGRESS_PASSWORD: ${ENV:POSTGRESS_PASSWORD} 
+      POSTGRESS_DATABASE: ${ENV:POSTGRESS_DATABASE} 
+      POSTGRESS_HOST: ${ENV:POSTGRESS_HOST} 
+      AWS_REGION: ${ENV:AWS_REGION} 
+      AWS_PROFILE: ${ENV:AWS_PROFILE} 
+      AWS_MEDIA_BUCKET: $ENV:{AWS_MEDIA_BUCKET}
+      JWT_SECRET: ${ENV:JWT_SECRET}
       URL: "http://localhost:8100"
   backend-feed:
     image: moemad711/udacity-restapi-feed
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
-      POSTGRESS_USERNAME: $ENV:POSTGRESS_USERNAME
-      POSTGRESS_PASSWORD: $ENV:POSTGRESS_PASSWORD 
-      POSTGRESS_DATABASE: $ENV:POSTGRESS_DATABASE 
-      POSTGRESS_HOST: $ENV:POSTGRESS_HOST 
-      AWS_REGION: $ENV:AWS_REGION 
-      AWS_PROFILE: $ENV:AWS_PROFILE 
-      AWS_MEDIA_BUCKET: $ENV:AWS_MEDIA_BUCKET
-      JWT_SECRET: $ENV:JWT_SECRET
+      POSTGRESS_USERNAME: ${ENV:POSTGRESS_USERNAME}
+      POSTGRESS_PASSWORD: ${ENV:POSTGRESS_PASSWORD} 
+      POSTGRESS_DATABASE: ${ENV:POSTGRESS_DATABASE} 
+      POSTGRESS_HOST: ${ENV:POSTGRESS_HOST} 
+      AWS_REGION: ${ENV:AWS_REGION} 
+      AWS_PROFILE: ${ENV:AWS_PROFILE} 
+      AWS_MEDIA_BUCKET: ${ENV:AWS_MEDIA_BUCKET}
+      JWT_SECRET: ${ENV:JWT_SECRET}
       URL: "http://localhost:8100"
   frontend:
     image: moemad711/udacity-frontend:local
