Working with lesson 4
deployments

--- a/nd9990-c3-microservices-v1-master/lesson-3-Container/exercises/udacity-c3-deployment/docker/docker-compose.yaml
+++ b/nd9990-c3-microservices-v1-master/lesson-3-Container/exercises/udacity-c3-deployment/docker/docker-compose.yaml
@@ -19,6 +19,8 @@ services:
       POSTGRESS_HOST: $POSTGRESS_HOST 
       AWS_REGION: $AWS_REGION 
       AWS_PROFILE: $AWS_PROFILE 
+      AWS_ACCESS_KEY_ID: $AWS_MEDIA_BUCEKT_ACCESS_KEY_ID
+      AWS_SECRET_ACCESS_KEY: $AWS_MEDIA_BUCKET_SECRET_ACCESS_KEY
       AWS_MEDIA_BUCKET: $AWS_MEDIA_BUCKET
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
@@ -33,6 +35,8 @@ services:
       POSTGRESS_HOST: $POSTGRESS_HOST 
       AWS_REGION: $AWS_REGION 
       AWS_PROFILE: $AWS_PROFILE 
+      AWS_ACCESS_KEY_ID: $AWS_MEDIA_BUCEKT_ACCESS_KEY_ID
+      AWS_SECRET_ACCESS_KEY: $AWS_MEDIA_BUCKET_SECRET_ACCESS_KEY
       AWS_MEDIA_BUCKET: $AWS_MEDIA_BUCKET
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
