--- a/nd9990-c3-microservices-v1-master/lesson-3-Container/exercises/udacity-c3-deployment/docker/docker-compose.yaml
+++ b/nd9990-c3-microservices-v1-master/lesson-3-Container/exercises/udacity-c3-deployment/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
   backend-user:
     image: moemad711/udacity-restapi-user
     volumes:
-      - $HOME/.aws:/root/.aws
+      - C:/Users/user/.aws:/root/.aws
     environment:
       POSTGRESS_USERNAME: $POSTGRESS_USERNAME
       POSTGRESS_PASSWORD: $POSTGRESS_PASSWORD 
@@ -27,16 +27,14 @@ services:
   backend-feed:
     image: moemad711/udacity-restapi-feed
     volumes:
-      - $HOME/.aws:/root/.aws
+      - C:/Users/user/.aws:/root/.aws
     environment:
       POSTGRESS_USERNAME: $POSTGRESS_USERNAME
       POSTGRESS_PASSWORD: $POSTGRESS_PASSWORD 
       POSTGRESS_DATABASE: $POSTGRESS_DATABASE 
       POSTGRESS_HOST: $POSTGRESS_HOST 
       AWS_REGION: $AWS_REGION 
-      AWS_PROFILE: $AWS_PROFILE 
-      AWS_ACCESS_KEY_ID: $AWS_MEDIA_BUCEKT_ACCESS_KEY_ID
-      AWS_SECRET_ACCESS_KEY: $AWS_MEDIA_BUCKET_SECRET_ACCESS_KEY
+      AWS_PROFILE: $AWS_PROFILE
       AWS_MEDIA_BUCKET: $AWS_MEDIA_BUCKET
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
