--- a/nd9990-c3-microservices-v1-master/lesson-4-Kubernetes/exercise/udacity-c3-deployment/docker/docker-compose.yaml
+++ b/nd9990-c3-microservices-v1-master/lesson-4-Kubernetes/exercise/udacity-c3-deployment/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
   backend-user:
     image: moemad711/udacity-restapi-user
     volumes:
-      - $HOME/.aws:/root/.aws
+      - C:/Users/user/.aws:/root/.aws
     environment:
       POSTGRESS_USERNAME: $POSTGRESS_USERNAME
       POSTGRESS_PASSWORD: $POSTGRESS_PASSWORD 
@@ -27,7 +27,7 @@ services:
   backend-feed:
     image: moemad711/udacity-restapi-feed
     volumes:
-      - $HOME/.aws:/root/.aws
+      - C:/Users/user/.aws:/root/.aws
     environment:
       POSTGRESS_USERNAME: $POSTGRESS_USERNAME
       POSTGRESS_PASSWORD: $POSTGRESS_PASSWORD 
