--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_install:
 
 
 install:
-  - docker-compose -f nd9990-c3-microservices-v1-master\lesson-4-Kubernetes\exercise\udacity-c3-deployment\docker\docker-compose-build.yaml build --parallel 
+  - docker-compose -f nd9990-c3-microservices-v1-master/lesson-4-Kubernetes/exercise/udacity-c3-deployment/docker/docker-compose-build.yaml build --parallel 
