--- a/course-03/exercises/udacity-c3-deployment/docker/docker-compose.yaml
+++ b/course-03/exercises/udacity-c3-deployment/docker/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
   backend-feed:
     image: moemad711/udacity-restapi-feed
     volumes:
-      - $HOME/.aws:/root/.aws
+      - C:/Users/user/.aws:/root/.aws
     environment:
       POSTGRESS_USERNAME: $POSTGRESS_USERNAME
       POSTGRESS_PASSWORD: $POSTGRESS_PASSWORD 
