--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ services: docker
 
 env:
   - DOCKER_COMPOSE_VERSION=1.25.5
+  - KOPS_CLUSTER_NAME=moemad.k8s.local
+  - KOPS_STATE_STORE=s3://udagram-moemad-kops-state-store
 
 before_install:
   - docker -v && docker-compose -v
@@ -14,8 +16,21 @@ before_install:
   - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
   - chmod +x ./kubectl
   - sudo mv ./kubectl /usr/local/bin/kubectl
+  - curl -LO https://github.com/kubernetes/kops/releases/download/$(curl -s https://api.github.com/repos/kubernetes/kops/releases/latest | grep tag_name | cut -d '"' -f 4)/kops-linux-amd64
+  - chmod +x kops-linux-amd64
+  - sudo mv kops-linux-amd64 /usr/local/bin/kops
+  - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+  - unzip awscliv2.zip
+  - sudo ./aws/install
 
 
 
 install:
   - docker-compose -f course-03/exercises/udacity-c3-deployment/docker/docker-compose.yaml build --parallel 
+  - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/aws-secret.yaml
+  - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/env-secret.yaml
+  - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/env-configmap.yaml
+  - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
+  - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/backend-user-deployment.yaml
+  - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
+  - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/frontend-deployment.yaml
