--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ services: docker
 
 env:
   - DOCKER_COMPOSE_VERSION=1.25.5
+  - KOPS_CLUSTER_NAME=moemad.k8s.local
+  - KOPS_STATE_STORE=s3://udagram-moemad-kops-state-store
+
 
 before_install:
   - docker -v && docker-compose -v
@@ -20,12 +23,14 @@ before_install:
   - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
   - unzip awscliv2.zip
   - sudo ./aws/install
-  - export KOPS_CLUSTER_NAME=moemad.k8s.local
-  - export KOPS_STATE_STORE=s3://udagram-moemad-kops-state-store
+  - KOPS_CLUSTER_NAME=moemad.k8s.local
+  - KOPS_STATE_STORE=s3://udagram-moemad-kops-state-store
 
 
 install:
   - docker-compose -f course-03/exercises/udacity-c3-deployment/docker/docker-compose.yaml build --parallel 
+  - kops update cluster 
+  - kops validate cluster
   - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/aws-secret.yaml
   - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/env-secret.yaml
   - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/env-configmap.yaml
