--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ language: minimal
 
 services: docker
 
-env:
+envdat:
   - DOCKER_COMPOSE_VERSION=1.25.5
-  - KOPS_CLUSTER_NAME=moemad.k8s.local
-  - KOPS_STATE_STORE=s3://udagram-moemad-kops-state-store
 
 
 before_install:
@@ -23,14 +21,12 @@ before_install:
   - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
   - unzip awscliv2.zip
   - sudo ./aws/install
-  - KOPS_CLUSTER_NAME=moemad.k8s.local
-  - KOPS_STATE_STORE=s3://udagram-moemad-kops-state-store
 
 
 install:
   - docker-compose -f course-03/exercises/udacity-c3-deployment/docker/docker-compose.yaml build --parallel 
-  - kops update cluster 
-  - kops validate cluster
+  - kops update cluster moemad.k8s.local --yes s3://udagram-moemad-kops-state-store
+  - kops validate cluster moemad.k8s.local --yes s3://udagram-moemad-kops-state-store
   - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/aws-secret.yaml
   - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/env-secret.yaml
   - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/env-configmap.yaml
