--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
 install:
   - docker-compose -f course-03/exercises/udacity-c3-deployment/docker/docker-compose-build.yaml build --parallel 
 #  - kops update cluster moemad.k8s.local --yes s3://udagram-moemad-kops-state-store
-  - kops validate cluster moemad.k8s.local --yes s3://udagram-moemad-kops-state-store
+  - kops validate cluster moemad.k8s.local s3://udagram-moemad-kops-state-store
   - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/aws-secret.yaml
   - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/env-secret.yaml
   - kubectl apply -f course-03/exercises/udacity-c3-deployment/k8s/env-configmap.yaml
