--- a/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
@@ -3,21 +3,36 @@ kind: Deployment
 metadata:
   labels:
     service: reverseproxy
+    #version: v2
   name: reverseproxy
 spec:
   replicas: 2
+  strategy:
+    typy: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 25%
   selector:
       matchLabels:
         service: reverseproxy
+        #version: v2
   template:
     metadata:
       labels:
         service: reverseproxy
+        #version: v2
     spec:
       containers:
       - image: moemad711/reverseproxy
         name: reverseproxy
-        imagePullPolicy: Always          
+        imagePullPolicy: Always
+        readinessProbe:
+          httpGet:
+            patth: /
+            port: 8080
+            initialDelaySeconds:  5
+            periodSeconds: 5
+            successThreshold: 1          
         resources:
           requests:
             memory: "64Mi"
