--- a/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   replicas: 2
   strategy:
-    typy: RollingUpdate
+    type: RollingUpdate
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 25%
