fix deployments readinessProbe

--- a/course-03/exercises/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
@@ -28,11 +28,11 @@ spec:
         imagePullPolicy: Always
         readinessProbe:
           httpGet:
-            patth: /
+            path: /
             port: 8080
-            initialDelaySeconds:  5
-            periodSeconds: 5
-            successThreshold: 1  
+          initialDelaySeconds:  5
+          periodSeconds: 5
+          successThreshold: 1  
         resources:
           requests:
             memory: "64Mi"
