--- a/course-03/exercises/udacity-c3-deployment/k8s/frontend-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/frontend-deployment.yaml
@@ -29,11 +29,11 @@ spec:
         imagePullPolicy: Always
         readinessProbe:
           httpGet:
-            patth: /
+            path: /
             port: 8080
-            initialDelaySeconds:  5
-            periodSeconds: 5
-            successThreshold: 1          
+          initialDelaySeconds:  5
+          periodSeconds: 5
+          successThreshold: 1          
         ports:
         - containerPort: 80
         resources:
