--- a/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
@@ -27,8 +27,7 @@ spec:
         name: reverseproxy
         imagePullPolicy: Always
         readinessProbe:
-          httpGet:
-            path: /
+          tcpSocket:
             port: 8080
           initialDelaySeconds:  5
           periodSeconds: 5
