making v2 of deploynent

--- a/course-03/exercises/udacity-c3-deployment/k8s/backend-user-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/backend-user-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     service: backend-user
-    #version: v2
+    version: v2
   name: backend-user
 spec:
   replicas: 2
@@ -15,12 +15,12 @@ spec:
   selector:
       matchLabels:
         service: backend-user
-        #version: v2 
+        version: v2 
   template:
     metadata:
       labels:
         service: backend-user
-        #version: v2
+        version: v2
     spec:
       containers:
       - image: moemad711/udacity-restapi-user
