--- a/course-03/exercises/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     service: backend-feed
-    #version: v2
+    version: v2
   name: backend-feed
 spec:
   replicas: 3
@@ -15,12 +15,12 @@ spec:
   selector:
       matchLabels:
         service: backend-feed
-        #version: v2
+        version: v2
   template:
     metadata:
       labels:
         service: backend-feed
-        #version: v2
+        version: v2
     spec:
       containers:
       - image: moemad711/udacity-restapi-feed
