--- a/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     service: reverseproxy
-    #version: v2
+    version: v2
   name: reverseproxy
 spec:
   replicas: 2
@@ -15,12 +15,12 @@ spec:
   selector:
       matchLabels:
         service: reverseproxy
-        #version: v2
+        version: v2
   template:
     metadata:
       labels:
         service: reverseproxy
-        #version: v2
+        version: v2
     spec:
       containers:
       - image: moemad711/reverseproxy
