--- a/course-04/project/c4-final-project-starter-code/backend/package.json
+++ b/course-04/project/c4-final-project-starter-code/backend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
+    "jwks-client": "^1.2.0",
     "middy": "^0.27.1",
     "serverless": "^1.71.3",
     "source-map-support": "^0.5.11",
