--- a/course-04/project/c4-final-project-starter-code/backend/package.json
+++ b/course-04/project/c4-final-project-starter-code/backend/package.json
@@ -11,7 +11,6 @@
     "jsonwebtoken": "^8.5.1",
     "jwks-client": "^1.2.0",
     "middy": "^0.27.1",
-    "serverless": "^1.71.3",
     "source-map-support": "^0.5.11",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
@@ -21,9 +20,13 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.14.4",
     "aws-sdk": "^2.433.0",
+    "serverless": "^1.72.0",
     "serverless-aws-documentation": "^1.1.0",
+    "serverless-dynamodb-local": "^0.2.39",
     "serverless-iam-roles-per-function": "^1.0.4",
+    "serverless-offline": "^6.3.0",
     "serverless-plugin-canary-deployments": "^0.4.7",
+    "serverless-pseudo-parameters": "^2.5.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
