--- a/course-04/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/course-04/project/c4-final-project-starter-code/backend/serverless.yml
@@ -46,21 +46,6 @@ provider:
     lamda: true
     apiGateway: true
 
-  #iamRoleStatements:
-  #  - Effect: Allow
-  #    Action:
-  #      - dynamodb:GetItem
-  #      - dynamodb:PutItem
-  #      - dynamodb:UpdateItem
-  #      - dynamodb:DeleteItem
-  #      - dynamodb:Query
-  #    Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}
-  #  - Effect: Allow
-  #    Action: 
-  #       - s3:PutObject
-  #       - s3:GetObject
-  #    Resource: arn:aws:s3:::${self:provider.environment.ATTACH_S3_BUCKET}/*
-
 functions:
 
   Auth:
@@ -131,6 +116,7 @@ functions:
       - Effect: Allow
         Action: 
           - dynamodb:UpdateItem
+          - dynamodb:GetItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}
       - Effect: "Allow"
         Action:
